Added the missing files & code to access the static files inside the module "by convention" for now.

--- a/Module.One/Module.One.csproj
+++ b/Module.One/Module.One.csproj
@@ -10,8 +10,6 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 </Project>
