--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Module.mvc\Module.mvc.csproj" />
     <ProjectReference Include="..\Module.One\Module.One.csproj" />
     <ProjectReference Include="..\WebApplication1\WebApplication1.csproj" />
